# togax-settings

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: README.md  pyproject.toml
examples/simple/: __main__.py  app.py  example.yaml
src/togax_settings/: __init__.py  nodes.py  schema_source.py  settings.py
