[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Toga Settings Demo"
bundle = "org.beeware"
version = "0.1"
url = "https://github.com/codep3/togax-settings"
license = "AGPL license"
author = "Codep3"
author_email = "codep3@github.com"

[tool.briefcase.app.simple]
formal_name = "Settings Demo"
description = "A testing app for Toga Settings"
sources = ["simple"]
requires = [
    # Replace "togax-settings" with ".." to test against the current code checkout.
    #"togax-settings",
    "..",
    "schema",
]

[tool.briefcase.app.simple.macOS]
requires = [
    "toga-cocoa",
    "std-nslog",
]

[tool.briefcase.app.simple.linux]
requires = [
    "toga-gtk",
]

[tool.briefcase.app.simple.windows]
requires = [
    "toga-winforms",
]

# Mobile deployments
[tool.briefcase.app.simple.iOS]
requires = [
    "toga-iOS",
    "std-nslog",
]

[tool.briefcase.app.simple.android]
requires = [
    "toga-android",
]
